# diafiltration-project

./: .gitignore  Makefile  README.md  diafiltration_project.ipynb  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
diafiltration_mpc/: disturbance.py  model.py  mpc_controller.py  parameters.py  plotting.py  robustness.py  simulation.py
diafiltration_mpc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
diafiltration_mpc/diafiltration_mpc.egg-info/: SOURCES.txt  top_level.txt
experiments/: horizon_study.py  main.py  param_mismatch.py  structural_mismatch.py
scripts/: run_disturbances.py  run_nominal.py
src/: __init__.py  app.py  constants.py  model.py  mpc.py  mpc_time_optimal.py  policies.py  robustness.py  simulation.py  simulator.py  simulator_time_optimal.py  tests.py  views.py
src/control/: __init__.py  builder.py  robust.py
src/core/: discretise.py  dynamics.py  linearise.py  params.py  tariff.py
src/diafiltration/: __init__.py  _cli.py  constants.py  disturbance.py  model.py  mpc.py  simulator.py
src/diafiltration.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/experiments/: montecarlo.py
src/sim/: __init__.py  scenarios.py  simulate.py
tests/: test_flux.py  test_model.py  test_mpc.py  test_mpc_regression.py
